2006-06-20  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* native/plugin/Makefile.am (libgcjwebplugin_la_CXXFLAGS): Define
	APPLETVIEWER_EXECUTABLE to gappletviewer.

2006-06-20  Tom Tromey  <tromey@redhat.com>

	PR classpath/28095:
	* java/net/URL.java (URL): Throw MalformedURLException if a
	RuntimeException is caught.  Chain exceptions.

2006-06-20  Lillian Angel  <langel@redhat.com>

	* gnu/java/awt/peer/gtk/GtkCheckboxPeer.java
	(create): Added check to prevent Seg Fault. Should not
	set the label if it is null.
	* gnu/java/awt/peer/gtk/GtkLabelPeer.java
	(setText): Changed to be a non-native function. Calls
	setNativeText if the String parameter is non-null.
	(setNativeText): Replaces old native setText function.
	* include/gnu_java_awt_peer_gtk_GtkLabelPeer.h: Regenerated.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkLabelPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkLabelPeer_setText): Removed.
	Replaced by Java_gnu_java_awt_peer_gtk_GtkLabelPeer_setNativeText.
	(Java_gnu_java_awt_peer_gtk_GtkLabelPeer_setNativeText): Replaced
	Java_gnu_java_awt_peer_gtk_GtkLabelPeer_setText.

2006-06-20  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/JTextComponent.java
	(AccessibleJTextComponent): Rewrote all javadocs
	for this inner class.

2006-06-20  Francis Kung  <fkung@redhat.com>

	* examples/gnu/classpath/examples/java2d/J2dBenchmark.java:
	Changed many members to be protected.
	(J2dBenchmark): moved to init() instead.
	(init): New method.
	(main): Call init() after creating object
	(testComplete): New method.
	(test_drawArc): Use maxTests varialbe instead of constant.
	(test_drawCubicCurve): Likewise.
	(test_drawEllipse): Likewise.
	(test_drawGeneralPath): Likewise.
	(test_drawImage): Likewise.
	(test_drawLine): Likewise.
	(test_drawQuadCurve): Likewise.
	(test_drawRectangle): Likewise.
	(test_drawRoundRectangle): Likewise.
	(test_drawTransparentImage): Likewise.
	(test_fillArc): Likewise.
	(test_fillEllipse): Likewise.
	(test_fillGeneralPath): Likewise.